@@ -4,6 +4,7 @@ Version 3.5.4 - xx yyy 2022
 Generic changes/fixes
 	* update MacOS info.plist as well as start shell script
 	* add building md5 hash for download verification
+	* make KML/KMZ export time step adjustable
 		
 Device specific changes/fixes
 	* GPS-Logger2/3 - fix error for Android saved OSD files
